logo padding fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ h1, h2, h3, h4{
 	
 	.navpadding {
 		padding-right: 0px !important;
+		padding-left: 0px !important;
 	}
 	
 	.navlogo {
